Update github links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 <body>
 <div class="page">
 <header>
-<a href="https://github.com/peterkuma/alcf"><img class="github" src="{{ "/img/github.png" | relative_url }}" width="80" /></a>
+<a href="https://github.com/alcf-lidar/alcf"><img class="github" src="{{ "/img/github.png" | relative_url }}" width="80" /></a>
 <a href="{{ "/" | relative_url }}" class="heading">
 <h1>ALCF<sup class="beta"><span>beta</span></sup></h1>
 <h2>Automatic Lidar and Ceilometer<br />Framework</h2>
