Add meta keywords

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="{{ "/css/default.css" | relative_url }}" />
 <link rel="stylesheet" href="{{ "/css/highlight.css" | relative_url}}" />
 <meta charset="utf-8" />
+<meta keywords="lidar,ceilometer,alc,cosp,meteorology,observation,climate,climate-science,atmosphere,python,fortran" />
 </head>
 <body>
 <div class="page">
