Logo and formatting

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <title>{{ page.title }} ‧ Automatic Lidar and Ceilometer Framework (ALCF)</title>
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i&display=swap" rel="stylesheet">
+<link href="{{ "/font/stylesheet.css" | relative_url }}" rel="stylesheet" />
 <link rel="stylesheet" href="{{ "/css/default.css" | relative_url }}" />
 <link rel="stylesheet" href="{{ "/css/highlight.css" | relative_url}}" />
 <meta charset="utf-8" />
@@ -11,9 +11,9 @@
 <body>
 <div class="page">
 <header>
-<a href="https://github.com/alcf-lidar/alcf"><img class="github" src="{{ "/img/github.png" | relative_url }}" width="80" /></a>
+<a href="https://github.com/alcf-lidar/alcf"><img class="github" src="{{ "/img/github.png" | relative_url }}" width="80"></a>
 <a href="{{ "/" | relative_url }}" class="heading">
-<h1>ALCF<sup class="beta"><span>beta</span></sup></h1>
+<h1><img src="{{ "/img/alcf-logo.png" | relative_url }}" class="logo" /> ALCF<sup class="beta"><span>beta</span></sup></h1>
 <h2>Automatic Lidar and Ceilometer<br />Framework</h2>
 </a>
 <nav>
