--- a/css/default.css
+++ b/css/default.css
@@ -1,5 +1,5 @@
 html {
-	font: 16px/24px "Open Sans", helvetica;
+	font: 16px/24px "Public Sans", helvetica;
 }
 
 .page {
@@ -32,7 +32,14 @@ header .github {
 h1 {
 	text-align: center;
 	font-size: 70px;
-	font-weight: 100;
+	font-weight: normal;
+	margin-bottom: 4px;
+}
+
+header .logo {
+	width: 70px;
+	position: relative;
+	top: 8px;
 }
 
 .heading h2 {
@@ -86,7 +93,10 @@ p {
 }
 
 .abstract {
-	font-weight: bold;
+	font-weight: 600;
+	background: rgba(0,0,0,0.03);
+	padding: 8px;
+	font-size: 17px;
 }
 
 nav {
