--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,8 @@
 <title>{{ page.title }} ‧ Automatic Lidar and Ceilometer Framework (ALCF)</title>
 <link href="{{ "/font/stylesheet.css" | relative_url }}" rel="stylesheet" />
 <link rel="stylesheet" href="{{ "/css/default.css" | relative_url }}" />
-<link rel="stylesheet" href="{{ "/css/highlight.css" | relative_url}}" />
+<link rel="stylesheet" href="{{ "/css/highlight.css" | relative_url }}" />
+<link rel="icon" href="{{ "/img/alcf-logo.png" | relative_url }}" />
 <meta charset="utf-8" />
 <meta keywords="lidar,ceilometer,alc,cosp,simulator,lidar simulator,ceilometer simulator,meteorology,observation,climate,climate science,atmosphere,python,fortran" />
 </head>
