--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
 {{ content }}
 </main>
 <footer>
-ALCF was developed at the <a href="https://www.canterbury.ac.nz">University of Canterbury</a>
+The ALCF was developed at the <a href="https://www.canterbury.ac.nz">University of Canterbury</a>
 with support from the <a href="https://www.deepsouthchallenge.co.nz">New Zealand Deep South National Science Challenge</a> and <a href="https://www.niwa.co.nz/">NIWA</a>. The ALCF lidar simulator is derived from <a href="https://github.com/CFMIP/COSPv1">COSP</a>. This website is hosted on <a href="https://github.com">GitHub</a>.
 </footer>
 </div>
