Remove the beta tag on page title

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 <header>
 <a href="https://github.com/alcf-lidar/alcf"><img class="github" src="{{ "/img/github.png" | relative_url }}" width="80"></a>
 <a href="{{ "/" | relative_url }}" class="heading">
-<h1><img src="{{ "/img/alcf-logo.png" | relative_url }}" class="logo" /> ALCF<sup class="beta"><span>beta</span></sup></h1>
+<h1><img src="{{ "/img/alcf-logo.png" | relative_url }}" class="logo" /> ALCF</h1>
 <h2>Automatic Lidar and Ceilometer<br />Framework</h2>
 </a>
 <nav>
