--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,8 +30,9 @@
 </main>
 <footer>
 <p>
-Copyright 2019–2021 Peter Kuma, Adrian J. McDonald, Olaf Morgenstern,
-Richard Querel, Israel Silber and Connor J. Flynn.
+Copyright 2019–2021 <a href="https://peterkuma.net/science">Peter Kuma</a>,
+Adrian J. McDonald, Olaf Morgenstern, Richard Querel, Israel Silber and
+Connor J. Flynn.
 </p>
 <p>
 The ALCF was developed at the <a href="https://www.canterbury.ac.nz">University of Canterbury</a>
